@@ -11,6 +11,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+- - - - - 3.3.1 - [13-09-2016] - - - - - - - - - - - - - - - - - - - -
++ Einbau alternative ItemID
+
 - - - - - 3.3.0 - [03-07-2016] - - - - - - - - - - - - - - - - - - - -
 + Einbau Mehrsprachigkeit
 
